# PFE_UNIFIED_PLATFORM

./: API_DOCUMENTATION.md  API_ENDPOINTS_ANALYSIS.md  CONTROLLERS_RESTRUCTURE_COMPLETE.md  DELIVERY_CONFIRMATION.md  DOCUMENTATION_INDEX.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SUMMARY.md  FRONTEND_BACKEND_GAP_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md  LARAVEL_AUDIT_REPORT.md  POSTMAN_COLLECTION.json  PROJECT_FILES.md  QUICK_FIXES_SUMMARY.md  QUICK_START.md  QUICK_TESTING_GUIDE.md  README.md  README_CHANGES.md  ROLE_API_EXAMPLES.md  ROLE_SYSTEM_GUIDE.md  SETUP_COMMANDS.md  SETUP_GUIDE.md  STATUS_REPORT.md  STRUCTURE_ULTRA_DETAILLEE.md  api_response.json  parse_pdf.py  pdf_content.txt  postman_collection_django.json  postman_collection_laravel.json  read_pdf.py  smart_ai_postman_collection.json  start-dev.sh  test_ai_endpoints.sh  test_chatbot.py
django-backend/: .env  .gitignore  debug_hf.py  manage.py  probe_hf.py  pyproject.toml  test_chatbot.py
django-backend/ai_services/: __init__.py  models.py  serializers.py
django-backend/analytics/: models.py  serializers.py
django-backend/api/: __init__.py  authentication.py  auto_extractor.py  pdf_reader_endpoint.py  permissions.py  serializers.py  temp_maint.py  urls.py  views.py
django-backend/assurance/: urls.py  views.py
django-backend/core/: models.py
django-backend/gestion_rh/: apps.py
django-backend/gestion_sociale/: apps.py  views.py
django-backend/ia_models/: apps.py  urls.py  views.py
django-backend/insurance/: __init__.py  models.py  serializers.py
django-backend/trained_models/: leave_gbr.joblib  (+7 more)
(+547 files in other folders)
